@startuml

title __APP's Class Diagram__\n

  package edu.uwrf.levelupfitness {
    class AddExerciseDialogFragment {
    }
  }
  

  package edu.uwrf.workoutapp {
    class BuildConfig {
    }
  }
  

  package edu.uwrf.levelupfitness {
    class CreateWorkoutFragment {
    }
  }
  

  package edu.uwrf.workoutapp {
    class ExampleInstrumentedTest {
    }
  }
  

  package edu.uwrf.levelupfitness {
    class Exercise {
    }
  }
  

  package edu.uwrf.levelupfitness {
    class ExerciseAdapter {
    }
  }
  

  package edu.uwrf.levelupfitness {
    class HomeFragment {
    }
  }
  

  package edu.uwrf.levelupfitness {
    class MainActivity {
    }
  }
  

  package edu.uwrf.levelupfitness {
    class MyExercisesFragment {
    }
  }
  

  package android.support.constraint {
    class R {
    }
  }
  

  package android.support.graphics.drawable {
    class R {
    }
  }
  

  package android.support.coreui {
    class R {
    }
  }
  

  package android.support.v7.viewpager {
    class R {
    }
  }
  

  package android.arch.lifecycle {
    package android.arch.lifecycle.livedata {
      class R {
      }
    }
  }
  

  package android.support.print {
    class R {
    }
  }
  

  package android.support.interpolator {
    class R {
    }
  }
  

  package android.arch.core {
    class R {
    }
  }
  

  package android.support.fragment {
    class R {
    }
  }
  

  package android.arch.lifecycle {
    package android.arch.lifecycle.livedata {
      package android.arch.lifecycle.livedata.core {
        class R {
        }
      }
    }
  }
  

  package android.support.documentfile {
    class R {
    }
  }
  

  package android.support.asynclayoutinflater {
    class R {
    }
  }
  

  package android.arch.lifecycle {
    class R {
    }
  }
  

  package android.arch.lifecycle {
    package android.arch.lifecycle.viewmodel {
      class R {
      }
    }
  }
  

  package android.support.cursoradapter {
    class R {
    }
  }
  

  package android.support.coreutils {
    class R {
    }
  }
  

  package android.support.slidingpanelayout {
    class R {
    }
  }
  

  package android.support.localbroadcastmanager {
    class R {
    }
  }
  

  package android.support.v7.recyclerview {
    class R {
    }
  }
  

  package android.support.compat {
    class R {
    }
  }
  

  package android.support.drawerlayout {
    class R {
    }
  }
  

  package android.support.customview {
    class R {
    }
  }
  

  package android.support.v4 {
    class R {
    }
  }
  

  package android.support.coordinatorlayout {
    class R {
    }
  }
  

  package edu.uwrf.workoutapp {
    class R {
    }
  }
  

  package android.support.swiperefreshlayout {
    class R {
    }
  }
  

  package android.support.transition {
    class R {
    }
  }
  

  package android.support.v7.appcompat {
    class R {
    }
  }
  

  package android.support.mediacompat {
    class R {
    }
  }
  

  package android.support.loader {
    class R {
    }
  }
  

  package android.support.v7.cardview {
    class R {
    }
  }
  

  package androidx.versionedparcelable {
    class R {
    }
  }
  

  package android.support.design {
    class R {
    }
  }
  

  package edu.uwrf.levelupfitness {
    class Workout {
    }
  }
  

  package edu.uwrf.levelupfitness {
    class WorkoutAdapter {
    }
  }
  

  AddExerciseDialogFragment -up-|> DialogFragment
  AddExerciseDialogFragment o-- AddExerciseDialogListener : listener
  CreateWorkoutFragment -up-|> AddExerciseDialogListener
  CreateWorkoutFragment -up-|> Fragment
  Exercise -up-|> Parcelable
  ExerciseAdapter -up-|> BaseAdapter
  HomeFragment -up-|> Fragment
  HomeFragment o-- Workout : model
  MainActivity -up-|> OnNavigationItemSelectedListener
  MainActivity -up-|> AppCompatActivity
  MyExercisesFragment -up-|> Fragment
  Workout -up-|> Parcelable
  WorkoutAdapter -up-|> BaseAdapter


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
